# pinns-options-pricing

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: pinn_configurations.json  pipeline.toml
data/: option_chain_sample.csv
scripts/: benchmark_methods.py  check_morning_status.sh  generate_pipeline_figures.py  run_comprehensive_experiments.py  run_full_pipeline.py
src/multi_option/: __init__.py  bs_closed_form.py  cli.py  config.py  datatypes.py  exotic_baselines.py
src/multi_option/evaluation/: benchmarks.py  compare_methods.py  convergence.py
src/multi_option/experiments/: __init__.py  pipeline.py  types.py
src/multi_option/experiments/stages/: __init__.py  european.py  pinn.py  tests.py
src/multi_option/fd_pde/: cn_barrier.py  cn_solver.py  grid.py  lcp_psor.py
src/multi_option/greeks/: finite_diff.py  pathwise_lr.py
src/multi_option/market/: arbitrage.py  chain_io.py  iv.py  surface.py
src/multi_option/mc/: pricing.py  rng.py  variance_reduction.py
src/multi_option/pinns/: __init__.py  adaptive_weights.py  architectures.py  exotic_architectures.py  exotic_loss.py  infer.py  loss.py  model.py  optimized_pinn.py  stabilized_pinn.py  train.py  utils.py
src/multi_option/products/: american_put.py  barrier_up_out_call.py  european.py
src/multi_option/reporting/: plots.py  serialize.py  tables.py
tests/: test_bs_closed_form.py  test_exotic_pinns.py  test_fd_vs_bs_european.py  test_mc_vs_bs_european.py
