[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinns-options-pricing"
version = "0.1.0"
description = "Physics-Informed Neural Networks for European options pricing. Achieves 0.064% error using Fourier features, adaptive weights, and EMA."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Junichi Koganemaru"}
]
keywords = [
    "physics-informed-neural-networks",
    "pinn",
    "options-pricing",
    "black-scholes",
    "pytorch",
    "computational-finance",
    "quantitative-finance",
    "neural-pde",
    "scientific-machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial"
]

[project.urls]
Homepage = "https://github.com/jkoganem/pinns-options-pricing"
Documentation = "https://github.com/jkoganem/pinns-options-pricing#readme"
Repository = "https://github.com/jkoganem/pinns-options-pricing.git"
Issues = "https://github.com/jkoganem/pinns-options-pricing/issues"

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "torch>=2.0.0",
    "click>=8.1.0",
    "scikit-learn>=1.3.0",
    "openpyxl>=3.1.0",
    "optuna>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "mypy>=1.3.0",
    "ruff>=0.0.270",
]

[project.scripts]
multi-option = "multi_option.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
multi_option = ["py.typed"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
